# path-parents

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: dependabot_validation.yml  publish.yml  release.yml  rust_publish.yml  rust_pull_request.yml  rust_security_audit.yml
src/: main.rs
testdata/: file1  file2  file3
tests/: cli.rs
