[package]
name = "path-parents"
version = "1.0.0"
edition = "2024"

# keep-sorted start block=yes
categories = ["command-line-utilities"]
description = """\
  `path-parents` prints all the parents of each path given, optionally \
  skipping parents up to the length specified by `--skip`.\
  """
keywords = ["cli", "file"]
license-file = "LICENSE"
repository = "https://github.com/tobinjt/colx"
# keep-sorted end

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
