[package]
name = "path-parents"
version = "1.0.1"
edition = "2024"

# keep-sorted start block=yes
categories = ["command-line-utilities"]
description = """\
  Prints all the parents of each path given, optionally skipping parents up to \
  the length specified by --skip.\
  """
keywords = ["cli", "file"]
license-file = "LICENSE"
repository = "https://github.com/tobinjt/path-parents"
# keep-sorted end

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
